# legacy_game

./: Cargo.toml  Makefile.toml  README.md
.cargo/: config.toml
src/: components.rs  config.rs  cursor.rs  input.rs  main.rs
