[package]
name = "legacy_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.1"
bevy-inspector-egui = "0.17.0"
bevy_ggrs = { version = "0.11", features = ["wasm-bindgen"] }
bevy_pancam = { version = "0.7.0", features = [ "bevy_egui", "bevy-inspector-egui"]}
bevy_web_asset = "0.5.0"
matchbox_socket = { version = "0.4", features = ["ggrs-socket"] }

[profile.wasm-release]
# Use release profile as default values
inherits = "release"

# Optimize with size in mind, also try "s", sometimes it is better.
# This doesn't increase compilation times compared to -O3, great improvements
opt-level = "z"

# Do a second optimization pass removing duplicate or unused code from dependencies.
# Slows compile times, marginal improvements
lto = "fat"

# When building crates, optimize larger chunks at a time
# Slows compile times, marginal improvements
codegen-units = 1